@@ -1,0 +1,5 @@
+<post href="http://www.howtocreate.co.uk/tutorials/texterise.php?dom=1" 
+  description="JavaScript DOM reference" 
+  extended="dom reference" 
+  hash="c0238dc0c44f07daedd9a1fd9bbdeebd" 
+  others="55" tag="dom javascript webdev" time="2005-11-28T05:26:09Z" />
